@@ -483,7 +483,7 @@ F:=:int:register_bytes_ok:long nr_bytes:nr_bytes
 f::int:cannot_fetch_register:int regnum:regnum::cannot_register_not::0
 f::int:cannot_store_register:int regnum:regnum::cannot_register_not::0
 # setjmp/longjmp support.
-F:=:int:get_longjmp_target:CORE_ADDR *pc:pc
+F::int:get_longjmp_target:CORE_ADDR *pc:pc
 #
 v:=:int:believe_pcc_promotion:::::::
 #
