@@ -1,3 +1,13 @@
+2007-06-06  Markus Deuling  <deuling@de.ibm.com>
+
+	* gdbarch.sh (GET_LONGJMP_TARGET): Replace by gdbarch_get_longjmp_target.
+	* infrun.c (handle_inferior_event): Likewise.
+	* gdbarch.sh (GET_LONGJMP_TARGET_P): Replace by
+	gdbarch_get_longjmp_target_p.
+	* breakpoint.c (breakpoint_re_set): Likewise.
+	* infrun.c (handle_inferior_event): Likewise.
+	* gdbarch.c, gdbarch.h: Regenerate.
+
 2007-06-06  Ulrich Weigand  <uweigand@de.ibm.com>
 
 	* hppa-hpux-tdep.c (args_for_find_stub, HP_ACC_EH_notify_hook,
